Uppdatera T-Berg-integrationer och profil
